samples/_failures_safe/1761083498_fbc5f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58bf4225.c: In function ‘main’:
./samples/SAFE/__tmp_58bf4225.c:154:44: error: missing terminating ' character
  154 |         'T', 'e', 's', 't', ' ', 'd', 'a', 't
      |                                            ^~
./samples/SAFE/__tmp_58bf4225.c:154:9: error: expected expression at end of input
  154 |         'T', 'e', 's', 't', ' ', 'd', 'a', 't
      |         ^~~
./samples/SAFE/__tmp_58bf4225.c:154:9: error: expected declaration or statement at end of input
